fix: resources section z-index issue

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -252,6 +252,9 @@
     background-repeat: repeat;
     background-size: 1797px 1086px;
   }
+  .column-content {
+    position: relative;
+  }
   .text-block {
     .cta.variant__cta-solid {
       .button-contents {
